style/home-style.css
@font-face {
  font-family: Pixel;
  src: url(../fonts/PixelifySans-VariableFont_wght.ttf);
}

body {
    background: #1e1e1e;
  }

body:after{
  position: absolute;
  width: 0;
  height: 0;
  overflow: hidden;
  z-index: -1;
  content: url(../img/insta-logo.webp) url(../img/linked-logo.png);
}

.header-main{
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 60px;
  background-color: white;
  display: flex;
  justify-content: space-between;
  z-index: 1000;
  }

.header-main-logo{
  width: fit-content;
  height: 100%;
  padding-left: 60px;
  display: flex;
}

.header-main-logo img{
  height: 40px;
  align-self: center;
}

.header-main-nav{
  width: fit-content;
  height: 100%;
}

.header-main-nav ul{
  list-style: none;
}

.header-main-nav ul li{
  display: inline;
  float: left;
}

.header-main-nav ul li a{
  padding: 0 10px 0 10px;
  font-family: Pixel;
  line-height: 30px;
  text-decoration: none;
  color: #1e1e1e;
}

.header-main-nav ul li a:hover{
  color: #38ff42;
}

.header-main-sm{
  width: fit-content;
  height: 100%;
  padding-right: 60px;
  display: flex;
  align-items: center;
  column-gap: 20px;
}

.header-main-sm-li{
  width: 20px;
  height: 20px;
  background-image: url(../img/linked-black.png);
  background-repeat: no-repeat;
  background-size: cover;
}

.header-main-sm-li:hover{
  background-image: url(../img/linked-logo.png);
}

.header-main-sm-in{
  width: 20px;
  height: 20px;
  background-image: url(../img/insta-black.jpg);
  background-repeat: no-repeat;
  background-size: cover;
}

.header-main-sm-in:hover{
  background-image: url(../img/insta-logo.webp);
}

.projects{
  font-family: Pixel;
  font-size: 25px;
}

.wrapper{
  width: 100%;
}

.img-info{
  margin-top: 30px;
  width: 100%;
}

.img-info h1{
  padding: 30px 30px 20px;
  font-family: Arial;
  font-size: 50px;
  color: white;
  line-height: 1px;
}

.img-info p{
  padding: 0px 30px 20px;
  font-family: Arial;
  font-size: 16px;
  color: #FFF;
  line-height: 24px;
}

.img-pumpkin{
  width: 100%;
  margin-top: 70px;
}

@media only screen and (min-width: 768px) {
  .img-arcade{
    display: block;
    width: 100%;
    padding-bottom: 10px;
  }

  .wrapper{
    width: 600px;
    margin: 0 auto;
  }

  .img-info h1{
    padding: 20px 0px 0px;
  }
  
  .img-info p{
    padding: 20px 0px 0px;
  }

  .img-pumpkin{
    padding-top: 30px;
  }
}

@media only screen and (min-width: 1000px) {
  .img-arcade{
    display: block;
    width: 100%;
    padding-bottom: 10px;
  }

  .wrapper{
    width: 1000px;
  }

  .img-info{
    width: 50%;
    float: right;
  }

  .img-info h1{
    padding: 20px 0px 0px 30px;
  }
  
  .img-info p{
    padding: 20px 0px 0px 30px;
  }

  .img-pumpkin{
    padding-top: 0px;
    width: 50%;
    float: left;
  }

}

.img-music{
  width: 1100px;
  height: 200px;
  background-image: url(img/music.png);
  background-size: 100%;
  background-repeat: no-repeat;
  background-position: center;
}
  
/*
h1 {
    color: #FFF;
    font-size: 2em;
    padding-top: 10px;
    width: 100%;
  }
  
h2 {
  }

  nav {
    width: 100;
    height: 100px;
    background-color: #1c1c1c;
    opacity: 90%
  }

ul {
    margin-left: 60px;
}

ul li {
    list-style: none;
    display: inline-block;
    line-height: 100px;
  }

ul li a {
    display: block;
    text-decoration: none;
    font-size: 20px;
    font-family: Arial;
    color: #ffffff;
    padding: 0 30px;
  }

ul li a:hover {
    color: #5575bc;
  }

p {
    color: aliceblue;
    line-height: 1.3em;
    text-align: left;
    width: 100%;
  }
  
*/

.img-music{
  width: 1100px;
  height: 200px;
  background-image: url(img/music.png);
  background-size: 100%;
  background-repeat: no-repeat;
  background-position: center;
}

/*

.menu{
    width: 100;
    height: 100px;
    background-color: #111;
    opacity: 50%;
}

.menu ul{
  margin-left: 60px;
}

.menu ul li{
  list-style: none;
  display: inline-block;
  line-height: 100px;
}

.menu ul li a{
  display: block;
  text-decoration: none;
  font-size: 20px;
  font-family: Arial;
  color:rgb(26, 164, 218);
  padding: 0 30px;
}

.menu ul li a:hover{
  color: #0051ff;
}
*/

